--- a/package.json
+++ b/package.json
@@ -4,23 +4,37 @@
   "description": "Webpack starter",
   "scripts": {
     "build": "cross-env NODE_ENV=production DEBUG=false webpack --config webpack.config.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js --watch --open"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js --watch"
   },
   "author": "tuduydongian.com",
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
-    "cross-env": "^5.0.1",
+    "browserslist": "^2.2.2",
+    "cross-env": "^5.0.2",
     "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^2.29.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-nested": "^2.1.0",
+    "style-loader": "^0.18.2",
+    "stylelint": "^8.0.0",
+    "stylelint-config-standard": "^17.0.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.5.1"
-  },
-  "dependencies": {
-    "jquery": "^3.2.1"
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   }
 }
